project-files/k8s/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: prova
  name: prova
